--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "react-router-dom": "^7.2.0"
+        "@radix-ui/react-dropdown-menu": "^2.1.6",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.476.0",
+        "react-router-dom": "^7.2.0",
+        "tailwind-merge": "^3.0.2",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
