--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
         "@radix-ui/react-alert-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-label": "^2.1.2",
+        "@radix-ui/react-popover": "^1.1.6",
         "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-slot": "^1.1.2",
         "@tanstack/react-table": "^8.21.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^3.6.0",
         "lucide-react": "^0.476.0",
         "next-themes": "^0.4.4",
+        "react-day-picker": "^8.10.1",
         "react-router-dom": "^7.2.0",
         "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.2",
