--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^3.6.0",
+        "jspdf": "^3.0.0",
+        "jspdf-autotable": "^5.0.2",
         "lucide-react": "^0.476.0",
         "next-themes": "^0.4.4",
         "react-day-picker": "^8.10.1",
         "react-router-dom": "^7.2.0",
         "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.2",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "xlsx": "^0.18.5"
     }
 }
