--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^3.6.0",
+        "framer-motion": "^12.4.10",
         "jspdf": "^3.0.0",
         "jspdf-autotable": "^5.0.2",
         "lucide-react": "^0.476.0",
