--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "@hookform/resolvers": "^4.1.3",
         "@iconify/react": "^5.2.0",
         "@radix-ui/react-alert-dialog": "^1.1.6",
+        "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.1.4",
+        "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-label": "^2.1.2",
         "@radix-ui/react-popover": "^1.1.6",
         "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-tooltip": "^1.1.8",
         "@react-hookz/web": "^25.0.1",
         "@tanstack/react-table": "^8.21.2",
         "class-variance-authority": "^0.7.1",
@@ -41,10 +45,12 @@
         "lucide-react": "^0.476.0",
         "next-themes": "^0.4.4",
         "react-day-picker": "^8.10.1",
+        "react-hook-form": "^7.54.2",
         "react-router-dom": "^7.2.0",
         "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.2",
         "tailwindcss-animate": "^1.0.7",
-        "xlsx": "^0.18.5"
+        "xlsx": "^0.18.5",
+        "zod": "^3.24.2"
     }
 }
