--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
         "@hookform/resolvers": "^4.1.3",
         "@iconify/react": "^5.2.0",
+        "@mui/material": "^7.0.0",
+        "@mui/x-charts": "^7.28.0",
         "@radix-ui/react-alert-dialog": "^1.1.6",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.1.4",
@@ -38,6 +42,7 @@
         "@radix-ui/react-tooltip": "^1.1.8",
         "@react-hookz/web": "^25.0.1",
         "@tanstack/react-table": "^8.21.2",
+        "chart.js": "^4.4.8",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^3.6.0",
@@ -46,9 +51,12 @@
         "jspdf-autotable": "^5.0.2",
         "lucide-react": "^0.476.0",
         "next-themes": "^0.4.4",
+        "react-chartjs-2": "^5.3.0",
+        "react-datepicker": "^8.2.1",
         "react-day-picker": "^8.10.1",
         "react-hook-form": "^7.54.2",
         "react-router-dom": "^7.2.0",
+        "recharts": "^2.15.1",
         "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.2",
         "tailwindcss-animate": "^1.0.7",
